# valida-vm

./: Cargo.toml  README.md  compile-and-install.sh
alu_u32/: Cargo.toml
alu_u32/src/: lib.rs
alu_u32/src/add/: columns.rs  mod.rs  stark.rs
alu_u32/src/bitwise/: mod.rs  stark.rs
alu_u32/src/com/: columns.rs  mod.rs  stark.rs
alu_u32/src/div/: columns.rs  mod.rs  stark.rs
alu_u32/src/lt/: columns.rs  mod.rs  stark.rs
alu_u32/src/mul/: columns.rs  mod.rs  stark.rs
alu_u32/src/shift/: columns.rs  mod.rs  stark.rs
alu_u32/src/sub/: columns.rs  mod.rs  stark.rs
assembler/: Cargo.toml
assembler/grammar/: assembly.pest
assembler/src/: lib.rs
basic/: Cargo.toml
basic-api/: Cargo.toml
basic-api-wasm/: Cargo.toml  README.md
basic-api-wasm/binary/: fibonacci
basic-api-wasm/src/: lib.rs
basic-api/benches/: keccak_bench.rs
basic-api/src/: lib.rs
basic-api/src/commands/: common.rs  interactive.rs  mod.rs  preprocess.rs  prove.rs  run.rs  verify.rs
basic-api/src/instance_data/: mod.rs
basic-api/src/machine/: basic.rs  boot.rs  mod.rs  multi_segment.rs  runtime.rs
basic-api/src/metrics/: func_cpu_usage.rs  metrics.rs  mod.rs
basic-api/tests/: test_interpreter.rs  test_prover.rs  test_static_data.rs
basic-api/tests/common/: mod.rs
basic-api/tests/programs/assembly/: endianess_and_loadu8_storeu8.val
basic-api/tests/test_instructions/: common.rs  main.rs  testmachine.rs
basic-api/tests/test_instructions/arith/: props.rs  tests.rs
basic-api/tests/test_instructions/bitwise/: mod.rs  props.rs  tests.rs
basic-api/tests/test_instructions/conditional/: props.rs  tests.rs
basic-api/tests/test_instructions/cpu/: props.rs  tests.rs
basic-api/tests/test_instructions/memory/: props.rs  tests.rs
basic_macro/: Cargo.toml
basic_macro/src/: lib.rs
basic_macro/tests/: test_interpreter.rs  test_prover.rs  test_static_data.rs
basic_macro/tests/programs/assembly/: fibonacci.val
bus/: Cargo.toml
bus/src/: lib.rs
bytes/: Cargo.toml
bytes/src/: lib.rs
cpu/: Cargo.toml
cpu/src/: columns.rs  lib.rs  stark.rs
derive/: Cargo.toml
derive/src/: lib.rs
elf/: Cargo.toml
elf/src/: lib.rs
elliptic/: Cargo.toml
elliptic/src/: lib.rs
keccak/: Cargo.toml
keccak/src/: columns.rs  lib.rs  logic.rs  stark.rs
lookups/: Cargo.toml
lookups/src/: lib.rs  stark.rs
machine/: Cargo.toml
machine/src/: advice.rs  check_constraints.rs  chip.rs  config.rs  core.rs  debug_builder.rs  error.rs  folding_builder.rs  indexer.rs  lib.rs  machine.rs  memory_backend.rs  persistence.rs  program.rs  proof.rs  public.rs  quotient.rs  verify.rs  write_tape.rs
machine/src/permutation/: columns.rs  mod.rs  stark.rs
machine/src/symbolic/: symbolic_builder.rs  symbolic_variable.rs
memory/: Cargo.toml
memory/src/: columns.rs  lib.rs  stark.rs
memory_footprint/: Cargo.toml
memory_footprint/src/: lib.rs
native_field/: Cargo.toml
native_field/src/: columns.rs  lib.rs  stark.rs
opcodes/: Cargo.toml
opcodes/src/: lib.rs
output/: Cargo.toml
output/src/: columns.rs  lib.rs  stark.rs
persistence/: Cargo.toml
persistence/src/: lib.rs
program/: Cargo.toml
program/src/: columns.rs  lib.rs
range/: Cargo.toml
range/src/: columns.rs  lib.rs
recursive-verifier/: Cargo.toml  prepare-recursive-verifier-input.sh
recursive-verifier-api/: Cargo.toml
recursive-verifier-api/src/: lib.rs
static_data/: Cargo.toml
static_data/src/: columns.rs  lib.rs  stark.rs
util/: Cargo.toml
verifier/: Cargo.toml
