[package]
name = "valida-basic-api-wasm"
version = "0.10.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2.16", features = ["js"] }
wasm-bindgen = "0.2"
valida-basic-api = { path = "../basic-api" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
rust-embed = { version = "8.2.0", features = ["interpolate-folder-path", "debug-embed"] }

# See https://github.com/webpack/webpack/issues/15566#issuecomment-2421927813
[profile.release]
strip=true
