[package]
name = "valida-bytes"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
smallvec = { workspace = true }
strum = "0.24"
strum_macros = "0.24"
valida-bus = { path = "../bus" }
valida-lookups = { path = "../lookups" }
valida-machine = { path = "../machine" }
valida-memory-footprint = { path = "../memory_footprint" }