[package]
name = "valida-lookups"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
smallvec = "1.13.2"
valida-bus = { path = "../bus" }
valida-machine = { path = "../machine" }
valida-derive = { path = "../derive" }
valida-util = { path = "../util" }
valida-memory-footprint = { path = "../memory_footprint" }