[package]
name = "valida-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-uni-stark = { workspace = true }
smallvec = { workspace = true }
valida-bus = { path = "../bus" }
valida-derive = { path = "../derive" }
valida-lookups = { path = "../lookups" }
valida-machine = { path = "../machine" }
valida-opcodes = { path = "../opcodes" }
valida-util = { path = "../util" }
valida-memory-footprint = { path = "../memory_footprint" }