[package]
name = "valida-range"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-uni-stark = { workspace = true }
valida-derive = { path = "../derive" }
valida-lookups = { path = "../lookups" }
valida-machine = { path = "../machine" }
valida-util = { path = "../util" }
